Release 3.6.2
========================================================================================================================

Version 3.6.2 is a minor release.

Compatibility with previous releases
====================================
Version 3.6.2 is source and binary compatible with 3.6.


Bugs Fixed in 3.6.2:
====================
* JEXL-454:     Switch NaN case not found.
* JEXL-453:     Finally clause is not evaluated.

========================================================================================================================
Release 3.6.1
========================================================================================================================

Version 3.6.1 is a minor release.

Compatibility with previous releases
====================================
Version 3.6.1 is source and binary compatible with 3.6.


Bugs Fixed in 3.6.1:
====================
* JEXL-452:     Debug setting in Engine shows class/method/line even when set to false.
* JEXL-451:     Restore JexlSandbox permission capabilities on Object.class.
* JEXL-450:     Disable instantiation of internal classes in RESTRICTED mode.
* JEXL-449:     Inconsistency on nature of curly-bracket syntactic elements regarding annotations.


Changes in 3.6.1:
=================

o               Bump org.apache.commons:commons-parent from 91 to 93 #391, #396. Thanks to Gary Gregory, Dependabot.
o               Bump org.apache.commons:commons-lang3 from 3.17.0 to 3.20.0. Thanks to Gary Gregory.

========================================================================================================================
Release 3.6.0
========================================================================================================================

Version 3.6.0 is a minor release.

Compatibility with previous releases
====================================
Version 3.6.0 is source and binary compatible with 3.5.


What's new in 3.6.0:
====================