@@ -30,6 +30,7 @@
         <release version="3.6.2" date="YYYY-MM-DD"
                  description="This is a feature and maintenance release. Java 8 or later is required.">
             <!-- FIX -->
+            <action dev="henrib" type="fix" issue="JEXL-455" due-to="Vincent Bussol">Tokenization error with multiline expressions.</action>
             <action dev="henrib" type="fix" issue="JEXL-454" due-to="Vincent Bussol">Switch NaN case not found.</action>
             <action dev="henrib" type="fix" issue="JEXL-453" due-to="Vincent Bussol">Finally clause is not evaluated.</action>
             <!-- ADD -->
